# data-loader

./: .env.example  .gitignore  README.md  manage.py  pyproject.toml
data_loader/: asgi.py  celery_tasks.py  settings.py  test_container.py  urls.py  wsgi.py
data_loader/fixtures/: users.json
data_loader/resources/: admin.py  apps.py  mixins.py  models.py  permissions.py  serializers.py  tasks.py  urls.py  views.py
data_loader/resources/migrations/: 0001_initial.py  0002_expiringlink.py  0003_uploadedimage_created_at_uploadedfile.py
data_loader/resources/tests/: test_views.py
data_loader/users/: admin.py  apps.py  models.py  permissions.py  serializers.py  urls.py  views.py
data_loader/users/migrations/: 0001_initial.py
data_loader/users/tests/: test_models.py  test_views.py
